--- a/taskTrayApp/taskTrayApp.csproj
+++ b/taskTrayApp/taskTrayApp.csproj
@@ -74,6 +74,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FirstBoot.cs" />
     <Compile Include="MyIconUtil.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -84,7 +85,7 @@
     <Compile Include="PlaySounds.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SettingFile.cs" />
+    <Compile Include="SettingData.cs" />
     <Compile Include="TaskTray.cs">
       <SubType>Form</SubType>
     </Compile>
